--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -5,11 +5,6 @@
 }
 
 body {
-  font-family: 'Arial', 'Helvetica', sans-serif;
-  color: #fff;
-  background: #333;
-
-  h1 {
-    font-size: 5rem;
-  }
+  font: 1rem "Helvetica Neue", Arial, sans-serif;
+  color: #121214;
 }
