--- a/src/components/RepositoryList/styles.scss
+++ b/src/components/RepositoryList/styles.scss
@@ -15,7 +15,7 @@
 
       p {
         font-size: 14px;
-        color: #444;
+        color: #988BC7;
         margin-top: 8px;
       }
 
@@ -23,7 +23,7 @@
         display: inline-block;
         margin-top: 16px;
         text-decoration: none;
-        color: #8257e6;
+        color: #67E480;
       }
     }
   }
